Рефрактинг класса котролирующего ходы в игре.